--- a/crates/mouse-assist-daemon/Cargo.toml
+++ b/crates/mouse-assist-daemon/Cargo.toml
@@ -10,4 +10,5 @@ mouse-assist-core = { path = "../mouse-assist-core" }
 thiserror = "2"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
-
+x11-dl = "2"
+x11rb = { version = "0.13", features = ["xinput", "xtest"] }
